[#813] Boxed expressions validation: Improve test coverage.